--- a/index.html
+++ b/index.html
@@ -556,6 +556,15 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
+                <h5>Nicole & Sean</h5>
+                <p><i class="fa fa-mobile"></i> <a href="tel://+491634847842">+49 163 4847842</a><br>
+                    <i class="fa fa-envelope-o"></i> <a href="mailto:love@nicole-sean.wedding">love@nicole-sean.wedding</a>
+                </p>
+                <h5>Zeremonienmeister Robin</h5>
+                <p>
+                    <i class="fa fa-mobile"></i> <a href="tel://+4915776427341">+49 1577 6427341</a><br>
+                    <i class="fa fa-envelope-o"></i> <a href="mailto:robin@nicole-sean.wedding">robin@nicole-sean.wedding</a>
+                </p>
                 <p>Crafted by Sean with lots of <span class="fa fa-heart pulse2"></span> for Nicole</p>
             </div>
         </div>
