--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row hidden_lg hidden-md hidden-xs">
+        <div class="row hidden-lg hidden-md hidden-xs">
             <div class="col-xs-12 section-border section-padding"></div>
         </div>
     </div>
@@ -374,7 +374,7 @@
     </div>
 </section>
 
-<section id="map" class="section-padding">
+<section id="map2" class="section-padding">
     <div class="text-center">
         <h3>Hochzeitsfeier</h3>
         <p>15.45 Uhr</p>
@@ -466,7 +466,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row hidden_lg hidden-md hidden-xs">
+        <div class="row hidden-lg hidden-md hidden-xs">
             <div class="col-xs-12 section-border section-padding"></div>
         </div>
     </div>
