--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     </div>-->
 </section>
 
-<section id="video-bg" class="">
+<section id="video-bg" class="hidden-sm hidden-xs">
     <div id="bgndVideo" class="player"
          data-property="{videoURL:'https://youtu.be/RhzGoKUE3Go',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:97, stopAt:200, opacity:1}">
          <!-- https://youtu.be/6iILthro_Fw -->
@@ -363,7 +363,7 @@
     </div>
 </section>
 
-<section id="video-bg2" class="">
+<section id="video-bg2" class="hidden-sm hidden-xs">
     <div id="bgndVideo2" class="player"
          data-property="{videoURL:'https://youtu.be/6iILthro_Fw',containment:'#video-bg2',autoPlay:true, mute:true, showControls:false, startAt:25, stopAt:70, opacity:1}">
          <!-- https://youtu.be/6iILthro_Fw -->
