--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Nicole & Sean Wedding">
     <meta property="og:description" content="Glück und Liebe zelebrieren.">
-    <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
+    <meta property="og:image" content="https://nicole-sean.wedding/img/header-min.jpg">
     <meta property="og:type" content="website">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"> -->
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" href="css/normalize.min.css">
@@ -101,7 +101,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Wie Zufälle benötigt es, um die große Liebe zu finden?</h3>
+                <h3 class="header">Wie viele Zufälle benötigt es, um die große Liebe zu finden?</h3>
             </div>
         </div>
         <div class="row">
@@ -109,7 +109,8 @@
             <div class="col-md-6">
                 <p>
                     In unserem Fall, so Einige. Mama Kapferer musste zunächst einmal ihren Weg von Ungarn ins schöne 
-                    Tirol finden, um dann in Papa Kapferer ihre große Liebe zu finden. Mama Schneeweiß verirrte sich aus dem amerikanischen Michigan nach Deutschland. Doch hier enden die Zufälle noch nicht.
+                    Tirol finden, um dann in Papa Kapferer ihre große Liebe zu finden. Mama Schneeweiß verirrte sich aus dem 
+                    amerikanischen Michigan nach Deutschland. Doch hier enden die Zufälle noch nicht.
                     Familie Schneeweiß hägte eine große Liebe zu Bergen, so begaben sie sich in das Tiroler Bergdorf Ehrwald,
                     wo Sohn Schneeweiß die selbe Schule besuchen sollte wie Tochter Kapferer.
                     So kam eins zum anderen. Aus Freundschaft wurde vor genau neun Jahren, am 31. Oktober, Liebe. 
