--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="Glück und Liebe zelebrieren.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
+    <meta name="robots" content="noindex">
     <meta property="og:title" content="Nicole & Sean Wedding">
     <meta property="og:description" content="Glück und Liebe zelebrieren.">
     <meta property="og:image" content="https://nicole-sean.wedding/img/header-min.jpg">
