--- a/index-de.html
+++ b/index-de.html
@@ -52,7 +52,7 @@
                             <li><a href="#events">Ablauf</a></li>
                             <!-- <li><a href="#instagram">Instagram</a></li> -->
                             <li><a href="#eng-pics">Fotos</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the locations</a></li>
+                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Event Locations</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#hotels" class="login">Hotels</a></li>
@@ -91,7 +91,6 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Wir heiraten.</h3>
-                <h3>Deutsch</h3>
                 <p><strong>Samstag, den 31. Oktober 2020</strong><br>
                     Wir wünschen uns, dass Ihr Teil davon seid.</p>
                 <!-- <div class="share-bar"></div> -->
