--- a/index-hu.html
+++ b/index-hu.html
@@ -48,10 +48,10 @@
                     <nav>
                         <ul class="primary-nav">
                             <li><a href="index-de.html" class="no-right-padding">DE|</a><a href="index-en.html" class="no-right-padding">EN|</a><a href="index-hu.html">HU</a></li>
-                            <li><a href="#intro">Über Uns</a></li>
-                            <li><a href="#events">Ablauf</a></li>
+                            <li><a href="#intro">About Us</a></li>
+                            <li><a href="#events">Event</a></li>
                             <!-- <li><a href="#instagram">Instagram</a></li> -->
-                            <li><a href="#eng-pics">Fotos</a></li>
+                            <li><a href="#eng-pics">Pics</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the locations</a></li>
                         </ul>
                         <ul class="member-actions">
@@ -91,7 +91,6 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Wir heiraten.</h3>
-                <h3>Ungarn</h3>
                 <p><strong>Samstag, den 31. Oktober 2020</strong><br>
                     Wir wünschen uns, dass Ihr Teil davon seid.</p>
                 <!-- <div class="share-bar"></div> -->
@@ -132,7 +131,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Ablauf</h3>
+                <h3 class="header">Event</h3>
             </div>
         </div>
         <div class="row">
@@ -230,7 +229,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Fotos</h3>
+                <h3 class="header">Pics</h3>
             </div>
         </div>
         <div class="row">
@@ -549,7 +548,7 @@
             </div> -->
             <div class="col-md-6 col-md-offset-3">
                 <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script>
-                <iframe id="rsvp-form" class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrt2zDi31Ra8jkT2?backgroundColor=pink" frameborder="0" onmousewheel="" width="100%" height="812" style="background: transparent; border: 1px solid #ccc;"></iframe>
+                <iframe id="rsvp-form" class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrbbohlup09PN7Rg?backgroundColor=pink" frameborder="0" onmousewheel="" width="100%" height="812" style="background: transparent; border: 1px solid #ccc;"></iframe>
             </div>
         </div>
     </div>
