--- a/index-hu.html
+++ b/index-hu.html
@@ -90,9 +90,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>Wir heiraten.</h3>
-                <p><strong>Samstag, den 31. Oktober 2020</strong><br>
-                    Wir wünschen uns, dass Ihr Teil davon seid.</p>
+                <h3>We are getting married..</h3>
+                <p><strong>Saturday, 31st October 2020</strong><br>
+                    We would be happy if you attend..</p>
                 <!-- <div class="share-bar"></div> -->
             </div>
         </div>
