--- a/locales/index.html
+++ b/locales/index.html
@@ -90,9 +90,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>Wir heiraten.</h3>
-                <p><strong>Samstag, den 31. Oktober 2020</strong><br>
-                    Wir wünschen uns, dass Ihr Teil davon seid.</p>
+                <h3>${{ t.wemarry }}$.</h3>
+                <p><strong>${{ t.date }}$</strong><br>
+                    ${{ t.happy }}$.</p>
                 <!-- <div class="share-bar"></div> -->
             </div>
         </div>
