--- a/locales/index.html
+++ b/locales/index.html
@@ -443,6 +443,7 @@
                     <a href="https://hotel.lago-ulm.de/de/" target="_blank">lago-ulm.de</a>
                 </p>
                 <p><strong>Leonardo Royal Hotel</strong><br>
+                    (${{ t.choice }}$)<br>
                     <a href="https://www.leonardo-hotels.de/leonardo-royal-hotel-ulm" target="_blank">leonardo-hotels.de</a>
                 </p>
                 <p><strong>RiKu Hotel</strong><br>
@@ -456,7 +457,8 @@
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <h4>Kempten & Umgebung</h4>
                 <p><strong>bigBOX Allgäu Hotel</strong><br>
-                <a href="https://www.bigboxallgaeu.de/hotel" target="_blank">bigboxallgaeu.de</a></p>
+                    (${{ t.choice }}$)<br>
+                    <a href="https://www.bigboxallgaeu.de/hotel" target="_blank">bigboxallgaeu.de</a></p>
                 <p><strong>Allgäu ART Hotel</strong><br>
                     <a href="https://www.allgaeuarthotel.de/" target="_blank">allgaeuarthotel.de</a></p>
                 <p><strong>Hotel-Gasthof Bayerischer Hof</strong><br>
