--- a/index-hu.html
+++ b/index-hu.html
@@ -90,9 +90,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting married..</h3>
+                <h3>We are getting married.</h3>
                 <p><strong>Saturday, 31st October 2020</strong><br>
-                    We would be happy if you attend..</p>
+                    We would be happy if you attend.</p>
                 <!-- <div class="share-bar"></div> -->
             </div>
         </div>
@@ -443,6 +443,7 @@
                     <a href="https://hotel.lago-ulm.de/de/" target="_blank">lago-ulm.de</a>
                 </p>
                 <p><strong>Leonardo Royal Hotel</strong><br>
+                    (our choice)<br>
                     <a href="https://www.leonardo-hotels.de/leonardo-royal-hotel-ulm" target="_blank">leonardo-hotels.de</a>
                 </p>
                 <p><strong>RiKu Hotel</strong><br>
@@ -456,7 +457,8 @@
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <h4>Kempten & Umgebung</h4>
                 <p><strong>bigBOX Allgäu Hotel</strong><br>
-                <a href="https://www.bigboxallgaeu.de/hotel" target="_blank">bigboxallgaeu.de</a></p>
+                    (our choice)<br>
+                    <a href="https://www.bigboxallgaeu.de/hotel" target="_blank">bigboxallgaeu.de</a></p>
                 <p><strong>Allgäu ART Hotel</strong><br>
                     <a href="https://www.allgaeuarthotel.de/" target="_blank">allgaeuarthotel.de</a></p>
                 <p><strong>Hotel-Gasthof Bayerischer Hof</strong><br>
